--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇳🇱 荷兰-262.9KB/s(Youtube:不良林), server: 213.183.51.171, port: 9070, type: ss, cipher: aes-256-cfb, password: bf7v334KKDV3YDhH}
-  - {name: 波兰-663.7KB/s(Youtube:不良林), server: 217.30.10.66, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
-  - {name: 🇷🇺 俄罗斯联邦-172.8KB/s(Youtube:不良林), server: 213.183.53.200, port: 9073, type: ss, cipher: aes-256-cfb, password: daFYagqDdBdA6VTX}
-  - {name: 保加利亚-598.0KB/s(Youtube:不良林), server: 213.183.63.217, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
-  - {name: 🇳🇱 荷兰-1.46MB/s(Youtube:不良林), server: 213.183.59.206, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
-  - {name: 🇺🇸 美国-1.92MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.23MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.71MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-2.44MB/s(Youtube:不良林), server: 213.183.53.214, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
+  - {name: 🇳🇱 荷兰-2.99MB/s(Youtube:不良林), server: 213.183.59.190, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
+  - {name: 🇷🇺 俄罗斯联邦-1.30MB/s(Youtube:不良林), server: 213.183.53.214, port: 9032, type: ss, cipher: aes-256-cfb, password: UWZQeLRWnkqgkseq}
   - {name: 🇳🇱 荷兰-807.7KB/s(Youtube:不良林), server: 213.183.59.206, port: 9032, type: ss, cipher: aes-256-cfb, password: UWZQeLRWnkqgkseq}
+  - {name: 🇷🇺 俄罗斯联邦-2.00MB/s(Youtube:不良林), server: 213.183.53.208, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
+  - {name: 🇷🇺 俄罗斯联邦-1.72MB/s(Youtube:不良林), server: 213.183.53.177, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
+  - {name: 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林), server: 213.183.53.177, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
+  - {name: 🇷🇺 俄罗斯联邦-1.61MB/s(Youtube:不良林), server: 213.183.53.177, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
+  - {name: 🇷🇺 俄罗斯联邦-2.64MB/s(Youtube:不良林), server: 213.183.53.200, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
+  - {name: 🇳🇱 荷兰-1.59MB/s(Youtube:不良林), server: 213.183.59.206, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-262.9KB/s(Youtube:不良林)
-      - 波兰-663.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-172.8KB/s(Youtube:不良林)
-      - 保加利亚-598.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.44MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.30MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-807.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.00MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.72MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.64MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.59MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇳🇱 荷兰-262.9KB/s(Youtube:不良林)
-      - 波兰-663.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-172.8KB/s(Youtube:不良林)
-      - 保加利亚-598.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.44MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.30MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-807.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.00MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.72MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.64MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.59MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-262.9KB/s(Youtube:不良林)
-      - 波兰-663.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-172.8KB/s(Youtube:不良林)
-      - 保加利亚-598.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.44MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.30MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-807.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.00MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.72MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.64MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.59MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇳🇱 荷兰-262.9KB/s(Youtube:不良林)
-      - 波兰-663.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-172.8KB/s(Youtube:不良林)
-      - 保加利亚-598.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.44MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.30MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-807.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.00MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.72MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.64MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.59MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-262.9KB/s(Youtube:不良林)
-      - 波兰-663.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-172.8KB/s(Youtube:不良林)
-      - 保加利亚-598.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.44MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.30MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-807.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.00MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.72MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.64MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.59MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-262.9KB/s(Youtube:不良林)
-      - 波兰-663.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-172.8KB/s(Youtube:不良林)
-      - 保加利亚-598.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.44MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.30MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-807.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.00MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.72MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.64MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.59MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-262.9KB/s(Youtube:不良林)
-      - 波兰-663.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-172.8KB/s(Youtube:不良林)
-      - 保加利亚-598.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.44MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.30MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-807.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.00MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.72MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.64MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.59MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
