--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,12 +5,12 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-1.52MB/s(Youtube:不良林), server: 54.36.174.181, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 波兰-1.15MB/s(Youtube:不良林), server: 217.30.10.67, port: 9094, type: ss, cipher: aes-256-cfb, password: rpgbNnU9rDDU4aWZ}
+  - {name: 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
+  - {name: 🇷🇺 俄罗斯联邦-2.21MB/s(Youtube:不良林), server: 213.183.53.200, port: 9024, type: ss, cipher: aes-256-cfb, password: BejrQvtu9sqUeNuZ}
+  - {name: 🇳🇱 荷兰-1.65MB/s(Youtube:不良林), server: 213.183.59.190, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
   - {name: 🇳🇱 荷兰-1.02MB/s(Youtube:不良林), server: 213.183.51.172, port: 9020, type: ss, cipher: aes-256-cfb, password: BNmAXXxAHYpTRdzu}
-  - {name: 🇺🇸 美国-2.23MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.19MB/s(Youtube:不良林), server: 38.68.135.18, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇷🇺 俄罗斯联邦-1.72MB/s(Youtube:不良林), server: 213.183.53.177, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
+  - {name: 保加利亚-598.0KB/s(Youtube:不良林), server: 213.183.63.217, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
+  - {name: 🇷🇺 俄罗斯联邦-248.0KB/s(Youtube:不良林), server: 213.183.53.177, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
   - {name: 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林), server: 213.183.53.177, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
   - {name: 🇷🇺 俄罗斯联邦-1.61MB/s(Youtube:不良林), server: 213.183.53.177, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
   - {name: 🇷🇺 俄罗斯联邦-2.64MB/s(Youtube:不良林), server: 213.183.53.200, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
@@ -21,12 +21,12 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.52MB/s(Youtube:不良林)
-      - 波兰-1.15MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.21MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.65MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.19MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.72MB/s(Youtube:不良林)
+      - 保加利亚-598.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-248.0KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.61MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.64MB/s(Youtube:不良林)
@@ -36,12 +36,12 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-1.52MB/s(Youtube:不良林)
-      - 波兰-1.15MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.21MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.65MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.19MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.72MB/s(Youtube:不良林)
+      - 保加利亚-598.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-248.0KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.61MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.64MB/s(Youtube:不良林)
@@ -52,12 +52,12 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.52MB/s(Youtube:不良林)
-      - 波兰-1.15MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.21MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.65MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.19MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.72MB/s(Youtube:不良林)
+      - 保加利亚-598.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-248.0KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.61MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.64MB/s(Youtube:不良林)
@@ -72,12 +72,12 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-1.52MB/s(Youtube:不良林)
-      - 波兰-1.15MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.21MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.65MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.19MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.72MB/s(Youtube:不良林)
+      - 保加利亚-598.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-248.0KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.61MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.64MB/s(Youtube:不良林)
@@ -87,12 +87,12 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.52MB/s(Youtube:不良林)
-      - 波兰-1.15MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.21MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.65MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.19MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.72MB/s(Youtube:不良林)
+      - 保加利亚-598.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-248.0KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.61MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.64MB/s(Youtube:不良林)
@@ -103,12 +103,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-1.52MB/s(Youtube:不良林)
-      - 波兰-1.15MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.21MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.65MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.19MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.72MB/s(Youtube:不良林)
+      - 保加利亚-598.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-248.0KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.61MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.64MB/s(Youtube:不良林)
@@ -128,12 +128,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-1.52MB/s(Youtube:不良林)
-      - 波兰-1.15MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.21MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.65MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.19MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.72MB/s(Youtube:不良林)
+      - 保加利亚-598.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-248.0KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.61MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.64MB/s(Youtube:不良林)
