--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
-  - {name: 🇷🇺 俄罗斯联邦-2.21MB/s(Youtube:不良林), server: 213.183.53.200, port: 9024, type: ss, cipher: aes-256-cfb, password: BejrQvtu9sqUeNuZ}
-  - {name: 🇳🇱 荷兰-1.65MB/s(Youtube:不良林), server: 213.183.59.190, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
-  - {name: 🇳🇱 荷兰-1.02MB/s(Youtube:不良林), server: 213.183.51.172, port: 9020, type: ss, cipher: aes-256-cfb, password: BNmAXXxAHYpTRdzu}
-  - {name: 保加利亚-598.0KB/s(Youtube:不良林), server: 213.183.63.217, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
+  - {name: 🇺🇸 美国-1.04MB/s(Youtube:不良林), server: 38.68.135.18, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-1.61MB/s(Youtube:不良林), server: 38.121.43.71, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇳🇱 荷兰-705.7KB/s(Youtube:不良林), server: 213.183.59.206, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
+  - {name: 🇳🇱 荷兰-291.8KB/s(Youtube:不良林), server: 213.183.51.171, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
+  - {name: 🇷🇺 俄罗斯联邦-2.02MB/s(Youtube:不良林), server: 213.183.53.177, port: 9060, type: ss, cipher: aes-256-cfb, password: ueLXVkvh4hckhErQ}
   - {name: 🇷🇺 俄罗斯联邦-248.0KB/s(Youtube:不良林), server: 213.183.53.177, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
   - {name: 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林), server: 213.183.53.177, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
-  - {name: 🇷🇺 俄罗斯联邦-1.61MB/s(Youtube:不良林), server: 213.183.53.177, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
+  - {name: 🇷🇺 俄罗斯联邦-2.66MB/s(Youtube:不良林), server: 213.183.53.177, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
   - {name: 🇷🇺 俄罗斯联邦-2.64MB/s(Youtube:不良林), server: 213.183.53.200, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
   - {name: 🇳🇱 荷兰-1.59MB/s(Youtube:不良林), server: 213.183.59.206, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.21MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.65MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.02MB/s(Youtube:不良林)
-      - 保加利亚-598.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-705.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-291.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.02MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-248.0KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.66MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.64MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.59MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.21MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.65MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.02MB/s(Youtube:不良林)
-      - 保加利亚-598.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-705.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-291.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.02MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-248.0KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.66MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.64MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.59MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,14 +52,14 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.21MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.65MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.02MB/s(Youtube:不良林)
-      - 保加利亚-598.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-705.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-291.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.02MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-248.0KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.66MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.64MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.59MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
@@ -72,14 +72,14 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.21MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.65MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.02MB/s(Youtube:不良林)
-      - 保加利亚-598.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-705.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-291.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.02MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-248.0KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.66MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.64MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.59MB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -87,14 +87,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.21MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.65MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.02MB/s(Youtube:不良林)
-      - 保加利亚-598.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-705.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-291.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.02MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-248.0KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.66MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.64MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.59MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -103,14 +103,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.21MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.65MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.02MB/s(Youtube:不良林)
-      - 保加利亚-598.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-705.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-291.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.02MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-248.0KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.66MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.64MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.59MB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -128,14 +128,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.21MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.65MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.02MB/s(Youtube:不良林)
-      - 保加利亚-598.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-705.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-291.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.02MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-248.0KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.66MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.64MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.59MB/s(Youtube:不良林)
 rules:
