--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.04MB/s(Youtube:不良林), server: 38.68.135.18, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇺🇸 美国-1.61MB/s(Youtube:不良林), server: 38.121.43.71, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇳🇱 荷兰-705.7KB/s(Youtube:不良林), server: 213.183.59.206, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
-  - {name: 🇳🇱 荷兰-291.8KB/s(Youtube:不良林), server: 213.183.51.171, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
-  - {name: 🇷🇺 俄罗斯联邦-2.02MB/s(Youtube:不良林), server: 213.183.53.177, port: 9060, type: ss, cipher: aes-256-cfb, password: ueLXVkvh4hckhErQ}
+  - {name: 🇺🇸 美国-1.61MB/s(Youtube:不良林), server: 38.68.135.18, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇳 中国-372.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-293.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-1.02MB/s(Youtube:不良林), server: 213.183.51.172, port: 9020, type: ss, cipher: aes-256-cfb, password: BNmAXXxAHYpTRdzu}
+  - {name: 🇨🇳 中国-284.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇷🇺 俄罗斯联邦-248.0KB/s(Youtube:不良林), server: 213.183.53.177, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
   - {name: 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林), server: 213.183.53.177, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
   - {name: 🇷🇺 俄罗斯联邦-2.66MB/s(Youtube:不良林), server: 213.183.53.177, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
-  - {name: 🇷🇺 俄罗斯联邦-2.64MB/s(Youtube:不良林), server: 213.183.53.200, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
+  - {name: 🇷🇺 俄罗斯联邦-2.85MB/s(Youtube:不良林), server: 213.183.53.200, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
   - {name: 🇳🇱 荷兰-1.59MB/s(Youtube:不良林), server: 213.183.59.206, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-705.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-291.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-372.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-293.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-284.7KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-248.0KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.66MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.64MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.85MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.59MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-705.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-291.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-372.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-293.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-284.7KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-248.0KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.66MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.64MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.85MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.59MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,15 +52,15 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-705.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-291.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-372.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-293.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-284.7KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-248.0KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.66MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.64MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.85MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.59MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
@@ -72,30 +72,30 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-705.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-291.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-372.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-293.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-284.7KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-248.0KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.66MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.64MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.85MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.59MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-705.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-291.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-372.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-293.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-284.7KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-248.0KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.66MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.64MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.85MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.59MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -103,15 +103,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-705.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-291.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-372.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-293.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-284.7KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-248.0KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.66MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.64MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.85MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.59MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -128,15 +128,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-705.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-291.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-372.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-293.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-284.7KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-248.0KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.66MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.64MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.85MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.59MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
